--- a/css/styles.css
+++ b/css/styles.css
@@ -16,32 +16,17 @@ body {
 .hidden {
   display: none;
 }
-.fancy-button {
-  color: #ff0051;
-  background-color: #fff;
-  font-weight: 400;
-  padding: 20px 40px;
-  cursor: pointer;
-  text-align: center;
-  width: 100px;
-  display: block;
-  margin: 15rem auto 0 auto;
-}
-
-/* ---------- */
-/* Navigation */
-/* ---------- */
-
 
 /* ------ */
 /* Header */
 /* ------ */
 
 div.fullscreen-background {
-  background: url(../img/background-bw.jpg) no-repeat center center fixed;
+  background: url(../img/background-lgt.jpg) no-repeat center center fixed;
+  background-size: cover;
+  background-attachment: scroll;
   width: 100%;
   height: 100%;
-  max-width: 100%;
 }
 div#landing {
   padding: 50px 0 0 0;
@@ -70,17 +55,15 @@ div#landing div.logo h1.slide-second {
   left: 23rem;
   top: 0px;
 }
-
 div#landing div.tagline h1 {
   font-family: 'Droid Serif', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
   font-weight: 600;
   line-height: 7rem;
   color: #fff;
-  text-align: center;
-  margin-top: 270px;
+  margin-top: 25%;
 }
 
-/* ------ */
+/* ----- */
 /* About */
 /* ----- */
 
@@ -120,16 +103,6 @@ div#about p {
   margin-bottom: 15px;
 }
 
-/* -------- */
-/* Services */
-/* -------- */
-
-
-/* ------- */
-/* Contact */
-/* ------- */
-
-
 /* ------ */
 /* Footer */
 /* ------ */
@@ -146,7 +119,7 @@ footer a {
   color: #fff;
 }
 footer div.contact {
-  text-align: right;
+  text-align: left;
   width: 80%;
 }
 footer div.contact strong {
@@ -160,7 +133,7 @@ footer div.contact ul li {
 footer div.contact div.copyright {
   font-size: 14px;
   font-family: "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-  text-align: right;
+  text-align: left;
   border-top: 1px solid #ff4d86;
   padding-top: 50px;
   margin-top: 50px;
